--- a/i18n/en-US.json
+++ b/i18n/en-US.json
@@ -14,5 +14,6 @@
   "ACCEPT": "ACCEPT",
   "COMPLETED": "COMPLETED",
   "REFUNDING": "REFUNDING",
-  "CANCELED": "CANCELED"
+  "CANCELED": "CANCELED",
+  "PRICEUNIT": "Dollors"
 }
